--- a/ProseCommandement/app/src/main/res/drawable/spinner_background.xml
+++ b/ProseCommandement/app/src/main/res/drawable/spinner_background.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <layer-list>
-            <item>
-                <shape>
-                    <solid android:color="#ffffff"/>
-                    <stroke
-                        android:width="1dp"
-                        android:color="#242A75" />
-                    <corners android:radius="5dp"/>
-                    <padding
-                        android:left="8dp"
-                        android:top="8dp"
-                        android:right="8dp"
-                        android:bottom="8dp"/>
-                </shape>
-            </item>
-        </layer-list>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/white" />
+    <corners android:radius="5dp" />
+    <padding
+        android:bottom="5dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:top="5dp" />
+</shape>
