--- a/ProseCommandement/app/src/main/res/layout/activity_audit.xml
+++ b/ProseCommandement/app/src/main/res/layout/activity_audit.xml
@@ -1,115 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f4f4f4"
-    android:padding="16dp">
+    android:background="@color/white"
+    tools:context=".AuditActivity">
 
-    <!-- En-tête -->
-    <LinearLayout
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#242A75"
-        android:orientation="horizontal"
-        android:padding="10dp">
+        android:background="@color/thales_blue"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/logoThales"
+            android:id="@+id/logo_thales"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/thales_logo"
-            android:contentDescription="Thales Logo" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/header_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Audit de la Mission"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:gravity="center"
-            android:textStyle="bold" />
+            android:text="@string/audit_title"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/logo"
+            app:layout_constraintStart_toEndOf="@+id/logo_thales"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
             android:src="@drawable/a_code_green"
-            android:contentDescription="Logo" />
-    </LinearLayout>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Contenu principal -->
-    <LinearLayout
-        android:id="@+id/auditContainer"
+    <!-- Audit Info Container -->
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/header"
-        android:orientation="vertical"
-        android:padding="20dp">
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toTopOf="@+id/footer"
+        app:layout_constraintTop_toBottomOf="@+id/header">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nombre d'entités détectées"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:paddingTop="10dp" />
-
-        <TextView
-            android:id="@+id/entitiesCount"
+        <LinearLayout
+            android:id="@+id/audit_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#f9f9f9"
-            android:padding="10dp"
-            android:textSize="14sp"
-            android:text="-" />
+            android:orientation="vertical"
+            android:padding="15dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ID des alliés"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:paddingTop="10dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/entities_detected"
+                android:textStyle="bold"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/alliesIds"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f9f9f9"
-            android:padding="10dp"
-            android:textSize="14sp"
-            android:text="-" />
+            <TextView
+                android:id="@+id/entities_count"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/info_background"
+                android:padding="10dp"
+                android:text="2" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="État de la mission"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:paddingTop="10dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/allies_ids"
+                android:textStyle="bold"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/missionStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#f9f9f9"
-            android:padding="10dp"
-            android:textSize="14sp"
-            android:text="-" />
+            <TextView
+                android:id="@+id/allies_ids"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/info_background"
+                android:padding="10dp"
+                android:text="12" />
 
-        <!-- Bouton Terminer -->
-        <Button
-            android:id="@+id/closeButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Terminer la mission"
-            android:background="#242A75"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="20dp" />
-    </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/mission_status"
+                android:textStyle="bold"
+                android:textSize="14sp" />
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/mission_status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/info_background"
+                android:padding="10dp"
+                android:text="Terminée" />
+
+            <Button
+                android:id="@+id/end_mission_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:backgroundTint="#242A75"
+                android:text="@string/end_mission_button"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
+
+    <!-- Footer -->
+    <View
+        android:id="@+id/footer"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/thales_blue"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
