--- a/ProseCommandement/app/src/main/res/layout/activity_eco_combat.xml
+++ b/ProseCommandement/app/src/main/res/layout/activity_eco_combat.xml
@@ -1,111 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f4f4f4"
-    android:padding="16dp">
+    android:background="@color/white"
+    tools:context=".EcoCombatActivity">
 
-    <!-- En-tête -->
-    <LinearLayout
+    <!-- Header -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#242A75"
+        android:background="@color/thales_blue"
         android:padding="10dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Spinner
-            android:id="@+id/modeSelect"
+            android:id="@+id/mode_selector"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@drawable/spinner_background"
             android:padding="5dp"
-            android:textSize="16sp"
-            android:spinnerMode="dropdown" />
-    </LinearLayout>
+            android:popupBackground="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Notification -->
+    <!-- Notification Banner -->
     <TextView
-        android:id="@+id/notification"
+        android:id="@+id/notification_banner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFD700"
-        android:text="⚠️ L'unité terrain a demandé un repli !"
-        android:textColor="#000"
-        android:textStyle="bold"
-        android:gravity="center"
+        android:background="@color/yellow"
         android:padding="10dp"
-        android:layout_below="@id/header"
-        android:layout_marginTop="10dp" />
+        android:text="@string/retreat_requested"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
-    <!-- Boutons de commande -->
+    <!-- Action Buttons Container -->
     <LinearLayout
-        android:id="@+id/buttonsContainer"
+        android:id="@+id/buttons_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="0dp"
         android:gravity="center"
-        android:layout_below="@id/notification"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical"
+        android:padding="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/footer"
+        app:layout_constraintTop_toBottomOf="@+id/notification_banner">
 
         <Button
-            android:id="@+id/btnRepli"
+            android:id="@+id/btn_retreat"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Repli"
-            android:background="#242A75"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:backgroundTint="#242A75"
+            android:padding="12dp"
+            android:text="@string/retreat"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/btnValider"
+            android:id="@+id/btn_request_approved"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Demande validée"
-            android:background="#242A75"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:backgroundTint="#242A75"
+            android:padding="12dp"
+            android:text="@string/request_approved"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
 
         <Button
-            android:id="@+id/btnRefuser"
+            android:id="@+id/btn_request_denied"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Demande refusée"
-            android:background="#242A75"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_margin="10dp" />
+            android:layout_margin="10dp"
+            android:backgroundTint="#242A75"
+            android:padding="12dp"
+            android:text="@string/request_denied"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
     </LinearLayout>
 
-    <!-- Boutons Mode Éco -->
-    <LinearLayout
-        android:id="@+id/buttonsMode"
+    <!-- Footer with Eco Mode Switch -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/footer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonsContainer"
-        android:layout_marginTop="20dp"
-        android:background="#242A75"
-        android:padding="8dp"
-        android:gravity="center">
+        android:layout_height="50dp"
+        android:background="@color/thales_blue"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/eco_mode_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:theme="@style/SwitchTheme"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/eco_mode_label"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
+            android:id="@+id/eco_mode_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mode Éco"
-            android:textColor="@android:color/white"
+            android:layout_marginStart="8dp"
+            android:text="@string/eco_mode"
+            android:textColor="@color/white"
             android:textSize="14sp"
-            android:layout_marginRight="10dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/eco_mode_switch"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Switch
-            android:id="@+id/ecoModeSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
