--- a/ProseCommandement/app/src/main/res/values/colors.xml
+++ b/ProseCommandement/app/src/main/res/values/colors.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#242A75</color>
+    <color name="colorPrimaryDark">#1A1F59</color>
+    <color name="colorAccent">#4CAF50</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- App specific colors -->
+    <color name="thales_blue">#242A75</color>
+    <color name="light_gray">#F4F4F4</color>
+    <color name="medium_gray">#CCCCCC</color>
+    <color name="dark_gray">#808080</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFD700</color>
+    <color name="green">#4CAF50</color>
 </resources>
