--- a/ProseCommandement/app/src/main/res/layout/activity_audit.xml
+++ b/ProseCommandement/app/src/main/res/layout/activity_audit.xml
@@ -54,10 +54,10 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Audit Info Container -->
-    <ScrollView
+    <!-- Configuration Form Container -->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:fillViewport="true"
         app:layout_constraintBottom_toTopOf="@+id/footer"
         app:layout_constraintTop_toBottomOf="@+id/header">
 
@@ -65,8 +65,11 @@
             android:id="@+id/audit_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:orientation="vertical"
-            android:padding="15dp">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="match_parent"
@@ -130,7 +133,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
         </LinearLayout>
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Footer -->
     <View
